# arduino-esp8266-aes-encryption-with-nodejs

./: AES.cpp  AES.h  Base64.cpp  Base64.h  Base64_config.h  CMakeLists.txt  aes_encryption.ino  example.cpp  random.h  test_unit.cpp
nodejs/: nodejs-decode-example.js
